Added unit test
- Changed name from special_tag_range to special_tags
